--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,7 @@
     </handlers>
     <rewrite>
       <rules>
-        <rule name="projetoCaApi">
+        <rule name="vendas">
           <match url="/*" />
           <action type="Rewrite" url="server.js" />
         </rule>
